# getargv.rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
examples/: getargv.rs
src/: argv.rs  argvargc.rs  lib.rs  main.rs
tests/: printing.rs
