[package]
name = "getargv"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
authors = ["CamJN <getargv@narzt.cam>"]
homepage = "https://getargv.narzt.cam/"
documentation = "https://docs.rs/getargv"
repository = "https://github.com/getargv/getargv-rust/"
description = "Correctly access another process' args on macOS"
categories = ["api-bindings", "os::macos-apis"]
keywords = ["argv", "arguments", "macOS", "KERN_PROCARGS2", "sysctl"]

[dependencies]
libc = "~0.2.137"

[dev-dependencies.clap]
version = "~4.0.27"
features = [ "cargo" ]

[target.'cfg(target_vendor = "apple")'.dependencies]
getargv-sys = "~0.4.1"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
