[package]
name = "getargv"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
readme = "README.md"
authors = ["CamJN <getargv@narzt.cam>"]
homepage = "https://getargv.narzt.cam/"
documentation = "https://docs.rs/getargv"
repository = "https://github.com/getargv/getargv.rs/"
description = "Correctly access another process' args on macOS"
categories = ["api-bindings", "os::macos-apis"]
keywords = ["argv", "arguments", "macOS", "KERN_PROCARGS2", "sysctl"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
libc = "~0.2.169"

[dev-dependencies.clap]
version = "~4.5.30"
features = [ "cargo" ]

[target.'cfg(target_vendor = "apple")'.dependencies]
getargv-sys = "~0.5.6"
